# rag-homework

./: .env.example  .gitignore  README.md  pyproject.toml  酒吧RAG品牌大使.ipynb
faiss_db/: index.faiss  index.pkl
