[project]
name = "rag-homework"
version = "0.1.0"
description = "夢酒館 RAG 品牌大使 - 使用 RAG 技術的智能調酒推薦與品牌介紹聊天機器人"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "gradio>=5.38.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "openai>=1.97.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.4",
]
